features of multicolor blocks by random, row or column

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	
 	<canvas id="myCanvas" width="600" height="600"></canvas>
 
+<script src="utils/utilsColor.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
