completed design of alert bars

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 <body>
 	
 	<canvas id="myCanvas" width="600" height="600"></canvas>
+	<div class="alert success">
+		<strong>YOU WIN, CONGRATULATIONS!</strong>
+		<button id="successBtn" class="close">
+			Close
+		</button>
+	</div>
+	<div class="alert failure">
+		<strong>GAME OVER!</strong>
+		<button id="failureBtn" class="close">
+			Close
+		</button>
+	</div>
+
 
 <script src="utils/utilsColor.js"></script>
 <script src="script.js"></script>
