--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<div class="alert success">
 		<strong>YOU WIN, CONGRATULATIONS!</strong>
 		<button id="successBtn" class="close">
-			Close
+			Restart the Game
 		</button>
 	</div>
 	<div class="alert failure">
 		<strong>GAME OVER!</strong>
 		<button id="failureBtn" class="close">
-			Close
+			Restart the Game
 		</button>
 	</div>
 
