--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
 	
 	<canvas id="myCanvas" width="600" height="600"></canvas>
-
+	<div id="size-container">
+		<label for="size-slider">Change size of the ball :</label>
+		<input id="size-slider" type="range" min="3" max="30">
+	</div>
 <script src="utils/utilsColor.js"></script>
 <script src="script.js"></script>
 </body>
