--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
 	
 	<canvas id="myCanvas" width="600" height="600"></canvas>
-
+	<div class="speed-container">
+		<label for="speed-slider">Change speed of the ball :</label>
+		<input id="speed-slider" type="range" min="1" max="5" value="2.5">
+	</div>
 <script src="utils/utilsColor.js"></script>
 <script src="script.js"></script>
 </body>
