--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </ul>
         </div>
 
-        <div class="column subscribe">
+        <!-- <div class="column subscribe">
           <h3 class="topic">Newsletter</h3>
           <div>
             <input
@@ -77,7 +77,7 @@
             />
             <button class="input buttonSus">Subscribe</button>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <div class="row copyright">
