--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Breakout Game</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1 class="heading">The Breakout Game</h1>
     <canvas id="myCanvas" width="600" height="600"></canvas>
     <div class="speed-container">
       <label for="speed-slider">Change speed of the ball :</label>
-      <input id="speed-slider" type="range" min="1" max="5" value="2.5" />
+      <input id="speed-slider" type="range" min="1" max="5" value="2.5">
     </div>
     <div class="alert success">
       <strong>YOU WIN, CONGRATULATIONS!</strong>
@@ -22,15 +22,15 @@
     </div>
     <div id="size-container">
       <label for="size-slider">Change size of the ball :</label>
-      <input id="size-slider" type="range" min="3" max="30" />
+      <input id="size-slider" type="range" min="3" max="30">
     </div>
     <footer>
       <div class="row primary">
         <div class="column about">
-          <h3 class="topic">Breakout Game</h3>
+          <h2 class="topic">Breakout Game</h2>
 
           <p>
-            This game is simple and easy to play and also beginner friendly made for children.So why are you waiting?Start playing the game and enjoy to the fullest!
+            This game is simple and easy to play and also beginner friendly made for children. So why are you waiting? Start playing the game and enjoy to the fullest!
           </p>
 
           <div class="social">
@@ -43,7 +43,7 @@
         </div>
 
         <div class="column links">
-          <h3 class="topic">Some Links</h3>
+          <h2 class="topic">Some Links</h2>
 
           <ul>
             <li>
@@ -56,7 +56,7 @@
         </div>
 
         <div class="column links">
-          <h3 class="topic">Some Links</h3>
+          <h2 class="topic">Some Links</h2>
           <ul>
             <li>
               <a href="#terms-of-services">Terms Of Service</a>
