--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</article>
 	</main>
     <footer>
-		<span>Copyright &copy; 2022 The Breakout Game ❤</span>
+		<span>Copyright &copy; 2022 Dhanush Nehru | The Breakout Game ❤</span>
     </footer>
     <script src="utils/utilsColor.js"></script>
     <script src="script.js"></script>
