--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section class="game-info">
 				<div>
 					<h2>Breakout Game</h2>
-					<p>This game is simple and easy to play and also beginner friendly made for children. So why are you waiting? Start playing the game and enjoy to the fullest!</p>
+					<p>This game is simple and easy to play and also beginner friendly. So why are you waiting? Start playing the game and enjoy to the fullest!</p>
 				</div>
 			</section>
 			<canvas id="myCanvas" width="600" height="600"></canvas>
