feat: implement pause state in Breakout game

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <label for="size-slider">Change size of the ball :</label>
             <input id="size-slider" type="range" min="3" max="30" />
           </div>
+          <button id="pauseBtn">Pause</button>
         </section>
         <div class="alert success">
           <strong>YOU WIN, CONGRATULATIONS!</strong>
