feat: add color picker for ball customization and update rendering logic

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             <label for="size-slider">Change size of the ball :</label>
             <input id="size-slider" type="range" min="3" max="30" />
           </div>
+            <div id="color-container">
+              <label for="color-picker">Change color of the ball :</label>
+              <input id="color-picker" type="color" value="#FFFF00" />
+            </div>
           <button id="pauseBtn">Pause</button>
         </section>
         <div class="alert success">
