--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <header>
       <h1 class="heading">The Breakout Game</h1>
+      <button id="themeToggle" style="margin-left:20px;font-size:20px;">🌙</button>
     </header>
     <main>
       <article class="game-container">
